# dapp-app

./: README.md  package-lock.json
anchor/: Anchor.toml
anchor/programs/new_crud/: Cargo.toml
anchor/programs/new_crud/src/: lib.rs
anchor/src/: index.ts  new_crud-exports.ts
anchor/tests/: new_crud.spec.ts
src/app/: layout.tsx
src/app/new_crud/: page.tsx
src/components/new_crud/: new_crud-data-access.tsx  new_crud-feature.tsx  new_crud-ui.tsx
src/components/ui/: ui-layout.tsx
